@@ -421,6 +421,15 @@ const char *gpac_doc =
 "This will assign property `MyProp` to `Super Audio` for first audio PID declared.\n"
 "EX gpac -i source.mp4:#MyProp=(Width+1280)HD\n"
 "This will assign property `MyProp` to `HD` for PIDs with property `Width` greater than 1280.\n"
+"\n"
+"The property value can be templated using the following keywords:\n"
+"- $GINC(init[,inc]) or @GINC(...): replaced by integer for each new output PID of the filter (see specific filter options for details on syntax)\n"
+"- $PROP$ or @PROP@: replaced by serialized value of property `PROP` (name or 4CC) of the PID or with empty string if no such property\n"
+"EX gpac -i source.ts:#ASID=$PID$\n"
+"This will assign DASH AdaptationSet ID to the PID ID value.\n"
+"EX gpac -i source.ts:#RepresentationID=$ServiceID$\n"
+"This will assign DASH Representation ID to the PID ServiceID value.\n"
+"\n"
 "# Using option files\n"
 "It is possible to use a file to define options of a filter, by specifying the target file name as an option without value, i.e. `:myopts.txt`.\n"
 "Warning: Only local files are allowed.\n"
